Openapi updated